--- a/EjercicioAbsoluteLayout_ThyaraVintimillaXavierRamos/MainPage.xaml
+++ b/EjercicioAbsoluteLayout_ThyaraVintimillaXavierRamos/MainPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="EjercicioAbsoluteLayout_ThyaraVintimillaXavierRamos.MainPage">
 
-    <AbsoluteLayout>
+    <AbsoluteLayout Background="Silver">
         <BoxView Color="Yellow"
                  AbsoluteLayout.LayoutBounds="0.5,0,100,50"
                  AbsoluteLayout.LayoutFlags="PositionProportional" />
